--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "html-react-parser": "^5.2.5",
     "mongoose": "^8.15.1",
     "next": "15.3.2",
